[gd_scene load_steps=6 format=2]

[ext_resource path="res://Public/Characters/galloProfile.png" type="Texture" id=1]
[ext_resource path="res://Public/Characters/playerProfile.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Fases/Quiz.gd" type="Script" id=3]
[ext_resource path="res://Public/Coracao.png" type="Texture" id=4]
[ext_resource path="res://Public/Coraçao quebrado.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.358
anchor_right = 0.5
anchor_bottom = 0.358
margin_left = -386.0
margin_top = -81.8
margin_right = 382.0
margin_bottom = 73.2

[node name="GalloProfile" type="Sprite" parent="Panel"]
position = Vector2( 842, -54 )
scale = Vector2( 0.690625, 0.60625 )
texture = ExtResource( 1 )

[node name="Pergunta" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.358
anchor_right = 0.5
anchor_bottom = 0.358
margin_left = -386.0
margin_top = -81.0
margin_right = 382.0
margin_bottom = 73.0
text = "Pergunta sobre qualquer merda"
align = 1
valign = 1
autowrap = true

[node name="botaoA" type="Button" parent="."]
anchor_left = 0.31
anchor_top = 0.599
anchor_right = 0.31
anchor_bottom = 0.599
margin_left = -186.44
margin_top = -45.4
margin_right = 186.56
margin_bottom = 45.6
text = "A"

[node name="PlayerProfile" type="Sprite" parent="botaoA"]
position = Vector2( -97, 243 )
scale = Vector2( 0.501563, 0.415625 )
texture = ExtResource( 2 )

[node name="botaoB" type="Button" parent="."]
anchor_left = 0.697
anchor_top = 0.599
anchor_right = 0.697
anchor_bottom = 0.599
margin_left = -186.728
margin_top = -45.0
margin_right = 186.272
margin_bottom = 45.0
text = "B"

[node name="botaoC" type="Button" parent="."]
anchor_left = 0.31
anchor_top = 0.791
anchor_right = 0.31
anchor_bottom = 0.791
margin_left = -186.0
margin_top = -45.6
margin_right = 186.0
margin_bottom = 45.4
text = "C"

[node name="botaoD" type="Button" parent="."]
anchor_left = 0.697
anchor_top = 0.791
anchor_right = 0.697
anchor_bottom = 0.791
margin_left = -186.0
margin_top = -45.6
margin_right = 186.0
margin_bottom = 45.4
text = "D"

[node name="Coracao3" type="Sprite" parent="."]
position = Vector2( 41, 70 )
scale = Vector2( 0.199713, 0.211207 )
texture = ExtResource( 4 )

[node name="Coracao2" type="Sprite" parent="."]
position = Vector2( 101, 70 )
scale = Vector2( 0.199713, 0.211207 )
texture = ExtResource( 4 )

[node name="Coracao1" type="Sprite" parent="."]
position = Vector2( 161, 70 )
scale = Vector2( 0.199713, 0.211207 )
texture = ExtResource( 4 )

[node name="CoraçaoQuebrado1" type="Sprite" parent="."]
position = Vector2( 159, 72 )
scale = Vector2( 0.0546875, 0.0542969 )
texture = ExtResource( 5 )

[node name="CoraçaoQuebrado2" type="Sprite" parent="."]
position = Vector2( 99, 72 )
scale = Vector2( 0.0546875, 0.0542969 )
texture = ExtResource( 5 )

[node name="CoraçaoQuebrado3" type="Sprite" parent="."]
position = Vector2( 39, 72 )
scale = Vector2( 0.0546875, 0.0542969 )
texture = ExtResource( 5 )

[node name="Acertos" type="Label" parent="."]
anchor_left = 0.494
anchor_top = 0.106
anchor_right = 0.494
anchor_bottom = 0.106
margin_left = -214.856
margin_top = -66.6
margin_right = 215.144
margin_bottom = 66.4
text = "0/2"
align = 1
valign = 1

[connection signal="pressed" from="botaoA" to="." method="_on_botaoA_pressed"]
[connection signal="pressed" from="botaoB" to="." method="_on_botaoB_pressed"]
[connection signal="pressed" from="botaoC" to="." method="_on_botaoC_pressed"]
[connection signal="pressed" from="botaoD" to="." method="_on_botaoD_pressed"]
